@@ -1,6 +1,6 @@
 Metadata-Version: 2.1
 Name: NewLifeUtils
-Version: 5.1.5
+Version: 5.1.6
 Summary: View changelog.txt at https://raw.githubusercontent.com/NewLife1324/NewLifeUtils-Dev/main/CHANGELOG.txt
 Home-page: https://github.com/NewLife1324/NewLifeUtils-Dev
 Author: New Life
