@@ -33,10 +33,12 @@ def parse_args(readed):
     # [\"\'][a-zA-ZА-Яа-яЁё\d\s[\]{}()@\\\.:;,-]*[\"\']|[a-zA-ZA-ZА-Яа-яЁё\d\.[\]{}()@\\\.:;,-]+
     # [\"][a-zA-ZА-Яа-яЁё\d\s[\]{}()@\\\.:;,\'-]*[\"]|[a-zA-ZA-ZА-Яа-яЁё\d\.[\]{}()@\\\.:;,\'-]+
     # [\"][a-zA-ZА-Яа-яЁё\d\s[\]{}()@\\\.:;,\'-/]*[\"]|[a-zA-ZA-ZА-Яа-яЁё\d\.[\]{}()@\\\.:;,\'-/]+
-    # [\"][a-zA-ZА-Яа-яЁё\d\s[\]{}()@#_=%?\*\\\.:;,\'-/]*[\"]|[a-zA-ZA-ZА-Яа-яЁё\d\.[\]{}()@\\\.:;,\'-/]+ (NOW)
+    # [\"][a-zA-ZА-Яа-яЁё\d\s[\]{}()@#_=%?\*\\\.:;,\'-/]*[\"]|[a-zA-ZA-ZА-Яа-яЁё\d\.[\]{}()@\\\.:;,\'-/]+
+    # [\"][a-zA-ZA-ZА-Яа-яЁё\d.[\]{}()@\\:;,\'\-\/!?#$%^&*_+№\d]*[\"]|[a-zA-ZA-ZА-Яа-яЁё\d.[\]{}()@\\:;,\'\-\/!?#$%^&*_+№]+
+    # [\"][a-zA-ZA-ZА-Яа-яЁё\d.[\]{}()<>@\\:;,\'\-\/!?#$%^&*_+№\d]*[\"]|[a-zA-ZA-ZА-Яа-яЁё\d.[\]{}()@\\:;,\'\-\/!?#$%^&*_+№<>]+ (NOW)
 
     res = re.findall(
-        r"[\"][a-zA-ZА-Яа-яЁё\d\s[\]{}()@#_=%?*\\.:;,\'-/]*[\"]|[a-zA-ZA-ZА-Яа-яЁё\d.[\]{}()@\\:;,\'-/]+",
+        r"[\"][a-zA-ZA-ZА-Яа-яЁё\d.[\]{}()<>@\\:;,\'\-\/!?#$%^&*_+№\d]*[\"]|[a-zA-ZA-ZА-Яа-яЁё\d.[\]{}()@\\:;,\'\-\/!?#$%^&*_+№<>]+",
         readed,
         re.MULTILINE,
     )
