@@ -13,7 +13,7 @@ ECHO + 2 - Start compile for Tests          + CTEST +
 ECHO + 3 - Publish to real                  + PREAL +
 ECHO + 4 - Publish to test                  + PTEST +
 ECHO + 5 - Install   to   global            + INGLB +
-ECHO + 6 - Uninstall from global            + UNGLB +
+ECHO +   - Uninstall from global            + UNGLB +
 ECHO + 7 - Install   to   env               + INENV +
 ECHO + 8 - Uninstall from env               + UNENV +
 ECHO + 9 - Run test from env                + RTEST +
@@ -29,7 +29,6 @@ IF %M%==2 GOTO CTEST
 IF %M%==3 GOTO PREAL
 IF %M%==4 GOTO PTEST
 IF %M%==5 GOTO INGLB
-IF %M%==6 GOTO UNGLB
 IF %M%==7 GOTO INENV
 IF %M%==8 GOTO UNENV
 IF %M%==9 GOTO RTEST
@@ -38,6 +37,11 @@ IF %M%==- GOTO INEWE
 IF %M%=='' GOTO EOF
 GOTO MENU
 :CPIPY
+ECHO STARTING CLEAR ----------------------
+RD dist /s /q
+RD build /s /q
+RD "NewLifeUtils.egg-info" /s /q
+ECHO FINISHING CLEAR ---------------------
 python setup.py sdist bdist_wheel
 GOTO MENU
 :CTEST
@@ -50,16 +54,12 @@ GOTO MENU
 twine upload --repository testpypi dist/*
 GOTO MENU
 :INGLB
+pip uninstall newlifeutils --yes
+ECHO FINISHING UNINSTALL -----------------
 python setup.py install
 GOTO MENU
-:UNGLB
-python setup.py uninstall
-GOTO MENU
 :INENV
-env\Scripts\python setup.py install
-GOTO MENU
-:UNENV
-env\Scripts\python setup.py uninstall
+env\Scripts\python setup.py install --upgrade
 GOTO MENU
 :RTEST
 env\Scripts\python test.py
